package cn.thinkinjava.design.pattern.behavior.command.frame;

/**
 * 命令接口角色
 *
 * @author qiuxianbao
 * @date : 2023/1/13
 */
public interface Command {
    void execute();
}
