package cn.thinkinjava.design.pattern.behavior.command.frame;

/**
 * 命令接收者
 *
 * @author qiuxianbao
 * @date : 2023/1/13
 */
public class Receiver {

    public Receiver() {
    }

    public void  action() {
        System.out.println("Receiver action");
    }
}
